--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "TokenOptions": {
+    "Audience": "engin@engin.com",
+    "Issuer": "engin@engin.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "mysupersecretkeymysupersecretkeymysupersecretkey"
+
+
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
